// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar matches snapshot with balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(85,85,85,1.00)",
            "direction": "ltr",
            "fontFamily": "Helvetica, \\"sans-serif\\"",
            "fontSize": "30px",
            "textAlign": "right",
          }
        }
      >
        0.00
      </div>
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(85,85,85,1.00)",
            "direction": "ltr",
            "fontFamily": "Helvetica, \\"sans-serif\\"",
            "fontSize": "18px",
            "textAlign": "right",
          }
        }
      >
        GD
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar matches snapshot without balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar should render the children component 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(0,0,0,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "textAlign": "left",
          }
        }
      >
        Children element
      </div>
    </div>
  </div>
</div>
`;
